@@ -10,6 +10,9 @@
     Mojo::Template.
   - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
   - Renamed Mojo::Command to Mojolicious::Command.
+  - Renamed format, reqs, symbol_start and symbols attributes in
+    Mojolicious::Routes::Pattern to format_regex, constraints,
+    placeholder_start and placeholders.
   - Merged get_all_data and get_data methods from Mojo::Command into data
     method in Mojo::Loader.
   - Moved class_to_file and class_to_path methods from Mojo::Command to
